# cashflowapp

./: .gitignore  Makefile  docker-compose.yml  requirements.txt  vercel.json
api/: index.py
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: router.py
backend/app/api/endpoints/: bible.py  cashflow.py  combined.py  defaults.py  tax_credit.py  upload.py
backend/app/domain/: budget_categories.py  timing_bible_data.py  week_utils.py
backend/app/models/: budget.py  cashflow.py  db_models.py  distribution.py  production.py  timing_bible.py
backend/app/services/: bible_distributor.py  bible_parser.py  cashflow_engine.py  distribution.py  excel_parser.py  excel_writer.py  parameters_parser.py  phase_mapper.py  tax_credit_writer.py  timeline.py
backend/tests/: conftest.py  test_bible_pattern_ranges.py  test_cashflow_endpoint.py  test_cashflow_engine.py  test_cashflow_templates.py  test_distribution.py  test_excel_writer_internal_oh.py  test_tax_credit_detail_budget.py  test_tax_credit_templates.py  test_timeline.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: HomePage.tsx
frontend/src/components/bible/: BibleEditor.tsx  (+1 more)
frontend/src/lib/: api.ts  customBible.ts  utils.ts
frontend/src/types/: bible.ts  budget.ts  cashflow.ts  production.ts  tax_credit.ts
test-data/: MONSTERS TRUTH BEHIND THE MYTHS - 4X60 - BUDGET(CAD) - V14 - 110325 copy.xlsx  README.md  ROCK SOLID BUILDS 5 - 8X60 - BUDGET (CAD) - V1 - 021126 copy.xlsx
(+15 files in other folders)
